# os_labs

./: .gitignore
lab1/: CMakeLists.txt  README.md
lab1/Creator/: Creator.cpp
lab1/Main/: Main.cpp
lab1/Reporter/: Reporter.cpp
lab1/include/: employee.h  win_error.h
